=== 2016-12-19
* Enhancements
  * Added #include? and #selected? to SelectList
  * Added #append to TextField
  * Added #wait_for_ajax support for the jQuery framework
  * Added #wait_for_ajax support for the Prototype framework
* Fixes
  * Fixed [] methods on OrderedList and UnOrderedList so it only gets direct children
  * Fixed items methods on OrderedList and UnOrderedList so it returns count of direct children
=== 2016-12-14
* Enhancements
  * Added shortcut method to check element exists
  * Added #disabled? method to Element
  * Added #selected_options method to SelectList
=== Version 1.1.1 / 2016-12-13
* Enhancements
  * Added ?_elements to ElementLocators so you can find all elements that match an identifier
  * Added ?_elements to NestedElements so you can find all elements nested within others

=== 2016-11-15
* Enhancements
  * Added #navigate_to method to PageFactory to navigate to a page through previous pages
  * Added routes to PageFactory to collect routes through the site
  * Added #continue_navigation_to method to PageFactory which begins at @current_page
******1.1.0******
=== 2016-11-14
* Enhancements
  * Added ability to find a parent of an Element
  * Added #focus method to Element
=== 2016-08-05
* Enhancements
  * Added ability to find Checkbox by :value
  * Added ability to find HiddenField by :value
  * Added #fire_event method to Element
* Fixes
  * Updated #populate_page_with to no longer attempt to set a value in a field that is disabled
=== 2016-08-04
* Enhancements
  * Added ability to find TextField by :title
  * Added ability to find Image by :alt
  * Added ability to find Form by :action
  * Added ability to find Image by :src
=== 2016-08-03
* Enhancements
  * Added ability to find image buttons by src
  * Added ability to find image buttons by alt
  * Added first_row and last_row methods to table
  * Added new module PagePopulator with single method populate_page_with