@@ -32,4 +32,28 @@ describe Druid::JavascriptFrameworkFacade do
     facade.framework = :prototype
     expect(facade.pending_requests).to eql "return Ajax.activeRequestCount"
   end
+
+  it "should not allow you to set the framework to one it does not know about" do
+    expect{ facade.framework = :blah }.to raise_error
+  end
+
+  it "should allow you to add a new javascript framework" do
+    module GoodFake
+      def self.pending_requests
+        "fake"
+      end
+    end
+
+    facade.add_framework(:blah, GoodFake)
+    facade.framework = :blah
+    expect(facade.pending_requests).to eql "fake"
+  end
+
+  it "should not allow you to add a new javascript framework that is invalid" do
+    module BadFake
+      def self.blah
+      end
+    end
+    expect{ facade.add_framework(:blah, BadFake) }.to raise_error
+  end
 end
