@@ -4,6 +4,7 @@
   * Added #append to TextField
   * Added #wait_for_ajax support for the jQuery framework
   * Added #wait_for_ajax support for the Prototype framework
+  * Added the ability to add new Javascript Frameworks to Druid via the #add_framework method
 * Fixes
   * Fixed [] methods on OrderedList and UnOrderedList so it only gets direct children
   * Fixed items methods on OrderedList and UnOrderedList so it returns count of direct children
